--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,9 +7,9 @@ spring:
     active: dev
   datasource:
     name: helloblog
-    url: jdbc:mysql://127.0.0.1:3306/helloblog?useSSL=false&characterEncoding=utf8
-    username: root
-    password: root
+    url:  ${MYSQL_DATABASE:jdbc:mysql://localhost:3306/helloblog?useSSL=false&characterEncoding=utf8}
+    username: ${MYSQL_USERNAME:root}
+    password: ${MYSQL_PASSWORD:root}
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.jdbc.Driver
     hikari:
