--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            </dependency>
+            <version>5.1.46</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -37,7 +38,8 @@
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            </dependency>
+            <version>1.9.2</version>
+        </dependency>
 
         <dependency>
             <groupId>com.baomidou</groupId>
@@ -48,6 +50,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.4</version>
             <scope>provided</scope>
         </dependency>
 
