--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.46</version>
         </dependency>
+        <dependency>
+            <groupId>eu.bitwalker</groupId>
+            <artifactId>UserAgentUtils</artifactId>
+            <version>1.20</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
