青涩知夏-》文章归档增加列表功能 青涩知夏-》增加24小时文章统计 青涩知夏-》引入byteblogs-data-boot-start

--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
             <artifactId>sigar</artifactId>
             <version>1.6.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.byteblogs</groupId>
+            <artifactId>byteblogs-data-boot-start</artifactId>
+            <version>0.0.1-RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
