--- a/pom.xml
+++ b/pom.xml
@@ -134,11 +134,17 @@
             <artifactId>byteblogs-data-boot-start</artifactId>
             <version>0.0.1-RELEASE</version>
         </dependency>
-        <!--  OSS文件服务  -->
+        <!--  阿里云OSS服务  -->
         <dependency>
             <groupId>com.aliyun.oss</groupId>
             <artifactId>aliyun-sdk-oss</artifactId>
             <version>3.8.0</version>
+        </dependency>
+        <!--   腾讯云COS服务     -->
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>5.6.8</version>
         </dependency>
 
     </dependencies>
