--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
             <artifactId>sigar</artifactId>
             <version>1.6.4</version>
         </dependency>
-        <!--  byteBlog服务  -->
+        <!--  helloBlog与byteBlogs对接服务  -->
         <dependency>
             <groupId>com.byteblogs</groupId>
             <artifactId>byteblogs-data-boot-starter</artifactId>
