修复评论的bug

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,3 +43,6 @@ mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
     cache-enabled: true
+
+logging:
+  config: classpath:config/spring-logback.xml
